# RSSGen

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
RSSGen/: app.py  config.py
RSSGen/core/: article_store.py  cache.py  feed.py  refresher.py  route.py  scraper.py  utils.py
RSSGen/routes/: __init__.py  afdian.py  zhihu.py
docs/superpowers/plans/: 2026-04-11-afdian-cold-start-optimization.md  2026-04-26-afdian-pipeline.md  2026-04-26-article-store-sqlite.md  2026-04-26-zhihu-rss-route.md
docs/superpowers/specs/: 2026-04-06-zhihu-rss-design.md  2026-04-11-afdian-cold-start-optimization-design.md  2026-04-26-afdian-pipeline-design.md  2026-04-26-article-store-sqlite-design.md  2026-04-26-zhihu-rss-route-design.md
tests/: conftest.py  helpers.py  test_afdian_caching.py  test_afdian_pipeline.py  test_article_store.py  test_refresher.py  test_zhihu_route.py  test_zhihu_sign.py
zhihu_sign_demo/: README.md  demo.py  other.js  package-lock.json  package.json  sign_gen.js  sign_minimal.js  zhihu.js  zhihu_lite.js  zhihu_sign.js
